--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -943,9 +943,9 @@
 
 "dialog_routing_select_closer_end" = "請選擇更接近道路的目的地。";
 
-"dialog_routing_change_intermediate" = "Please select another intermediate point";
+"dialog_routing_change_intermediate" = "找不到中途休息站。";
 
-"dialog_routing_intermediate_not_determined" = "An intermediate point is not determined.";
+"dialog_routing_intermediate_not_determined" = "請調整您的中途休息站。";
 
 "dialog_routing_system_error" = "系統錯誤";
 
@@ -1354,9 +1354,9 @@
 
 "onboarding_welcome_title" = "歡迎來到 MAPS.ME";
 
-"onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
+"onboarding_welcome_first_subtitle" = "免費、快速、詳盡又全面的地圖，提供逐向導航服務。";
 
-"onboarding_welcome_second_subtitle" = "By launching the application, you agree to <a href=\"http://legal.my.com/us/maps/tou/\">Terms</a> of Use and <a href=\"https://legal.my.com/us/maps/privacy/\">Privacy Policy</a>.";
+"onboarding_welcome_second_subtitle" = "啟用本應用程式，即表示您同意 <a href=\"http://legal.my.com/us/maps/tou/\">服務條款</a>和 <a href=\"https://legal.my.com/us/maps/privacy/\">隱私權原則</a>。";
 
 "dialog_incorrect_feature_position" = "改變位置";
 
@@ -1683,7 +1683,7 @@
 "taxi_not_found" = "無法在附近找到計程車";
 
 /* When there are no available taxi providers nearby */
-"taxi_no_providers" = "Couldn’t find a taxi provider nearby";
+"taxi_no_providers" = "此處不提供計程車服務";
 
 "install_app" = "安裝";
 
@@ -1934,7 +1934,7 @@
 
 "prefs_languages_information" = "我們使用系統 TTS 提供語音指示。許多 Android 裝置使用 Google TTS，您可從 Google Play 下載或更新 (https://play.google.com/store/apps/details?id=com.google.android.tts)";
 
-"prefs_languages_information_off" = "對於阿拉伯語、希臘語或羅馬尼亞語，必須從 Google Play 下載 Vocalizer TTS 或 SVOX Classics 等其他 TTS (因為 Google TTS 尚未支援這些語言)。\n若要管理語音合成的設定，請在您的裝置上開啟「設定 –> 語言和輸入 –> 語音 –> 文字轉語音輸出」。您可在此下載其他語言套件，或選擇偏好的文字轉語音引擎。";
+"prefs_languages_information_off" = "對於某些語言，您將需要從 App 商店 (Google Play Market, Samsung Apps) 安裝其他語音合成器或額外的語言套件。\n開啟您裝置的設定 → 語言與輸入 → 語音 → 文字轉換語音輸出。\n在這裡，您可以管理語音合成器的設定（例如，下載語言套件以供離線使用），並選取其他文字轉換語音引擎。";
 
 "prefs_languages_information_off_link" = "如需更多資訊，請參閱本指南。";
 
