--- a/android/res/values-da/strings.xml
+++ b/android/res/values-da/strings.xml
@@ -586,6 +586,8 @@
 	<string name="dialog_routing_change_end">Vælg en anden destination</string>
 	<string name="dialog_routing_end_not_determined">Det lykkedes ikke at planlægge en rute. Destinationen blev ikke fundet.</string>
 	<string name="dialog_routing_select_closer_end">Angiv en destination, der ligger tættere på en vej.</string>
+	<string name="dialog_routing_change_intermediate">Kunne ikke lokalisere mellemliggende punkt.</string>
+	<string name="dialog_routing_intermediate_not_determined">Rediger det mellemliggende punkt.</string>
 	<string name="dialog_routing_system_error">Systemfejl</string>
 	<string name="dialog_routing_application_error">Det lykkedes ikke at planlægge en rute. Der opstod en fejl i systemet.</string>
 	<string name="dialog_routing_try_again">Prøv igen</string>
@@ -791,6 +793,8 @@
 	<string name="onboarding_permissions_title">Giv MAPS.ME adgang til lager og position</string>
 	<string name="onboarding_permissions_message">Så du kan hente kort, se steder og trafik i nærheden af dig og benytte navigation.</string>
 	<string name="onboarding_welcome_title">Velkommen til MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">Kort, der er gratis, hurtige, detaljerede og helt igennem offline, med rutenavigation.</string>
+	<string name="onboarding_welcome_second_subtitle">Ved at åbne appen accepterer du vores &lt;a href=\"http://legal.my.com/us/maps/tou/\">Vilkår for anvendelse&lt;/a> og &lt;a href=\"https://legal.my.com/us/maps/privacy/\">Fortrolighedspolitik&lt;/a>.</string>
 	<string name="dialog_incorrect_feature_position">Skift lokation</string>
 	<string name="message_invalid_feature_position">Et objekt kan ikke placeres her</string>
 	<string name="login_to_make_edits_visible">Log på så andre brugere kan se ændringerne som du har foretaget.</string>
@@ -966,6 +970,8 @@
 	<string name="taxi_wait">Forventes om %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Kunne ikke finde en taxi i nærheden</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">Taxi ikke tilgængelig her</string>
 	<string name="install_app">Installer</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filter</string>
@@ -1096,7 +1102,7 @@
 	<string name="on">Til</string>
 	<string name="off">Fra</string>
 	<string name="prefs_languages_information">Vi bruger systemets TTS til stemmevejledning. Mange Android-enheder bruger Google TTS, du kan hente eller opdatere det via Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)</string>
-	<string name="prefs_languages_information_off">I forbindelse med sprogene arabisk, græsk og rumænsk skal du installere yderligere TTS såsom som Vocalizer TTS eller SVOX Classics fra Google Play (eftersom Google TTS ikke understøtter disse sprog endnu). Hvis du vil administrere indstillinger for talesyntese på enheden, skal du åbne Indstillinger –> Sprog og input –> Tale –> Tekst til tale-output. Her kan du downloade yderligere sprogpakker eller vælge dit foretrukne tekst til tale-program.</string>
+	<string name="prefs_languages_information_off">For nogle sprog skal du installere en anden talesyntese eller en yderligere sprogpakke fra appbutiken (Google Play Market, Samsung Apps).\nÅbn enhedens indstillinger → Sprog og input → Tale → Tekst til tale. Her kan du administrere indstillingerne for talesyntese (f. eks downloade en sprogpakke til brug offline) og vælge et andet tekst-til-tale program.</string>
 	<string name="prefs_languages_information_off_link">Se denne vejledning for flere oplysninger.</string>
 	<string name="whatsnew_transliteration_title">Translitteration til latinsk</string>
 	<string name="whatsnew_transliteration_message">Hvis en gade eller et objekt ikke har et navn på dit sprog, vil det blive stavet ved hjælp af det latinske alfabet.</string>
