--- a/android/res/values-de/strings.xml
+++ b/android/res/values-de/strings.xml
@@ -596,6 +596,8 @@
 	<string name="dialog_routing_change_end">Ziel anpassen</string>
 	<string name="dialog_routing_end_not_determined">Route wurde nicht erstellt. Ziel kann nicht gefunden werden.</string>
 	<string name="dialog_routing_select_closer_end">Bitte wählen Sie einen Zielort in der Nähe einer Straße aus.</string>
+	<string name="dialog_routing_change_intermediate">Zwischenstopp kann nicht gefunden werden.</string>
+	<string name="dialog_routing_intermediate_not_determined">Bitte passen Sie Ihren Zwischenstopp an.</string>
 	<string name="dialog_routing_system_error">Systemfehler</string>
 	<string name="dialog_routing_application_error">Route kann wegen eines Anwendungsfehlers nicht erstellt werden.</string>
 	<string name="dialog_routing_try_again">Bitte versuchen Sie es erneut</string>
@@ -801,6 +803,8 @@
 	<string name="onboarding_permissions_title">Erlauben Sie MAPS.ME, auf Speicher und Standort zuzugreifen</string>
 	<string name="onboarding_permissions_message">So können Sie Karten herunterladen, Orte und Verkehrslage in Ihrer Nähe sehen und die Navigation nutzen.</string>
 	<string name="onboarding_welcome_title">Willkommen bei MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">Kostenlose, schnelle, detaillierte und vollständig offline benutzbare Karten mit genauer Navigation.</string>
+	<string name="onboarding_welcome_second_subtitle">Durch das Starten der Anwendung stimmen Sie den &lt;a href=\"http://legal.my.com/us/maps/tou/\">Nutzungsbedingungen&lt;/a> und der &lt;a href=\"https://legal.my.com/us/maps/privacy/\">Datenschutzrichtlinie&lt;/a> zu.</string>
 	<string name="dialog_incorrect_feature_position">Standort wechseln</string>
 	<string name="message_invalid_feature_position">Ein Objekt kann hier nicht positioniert werden</string>
 	<string name="login_to_make_edits_visible">Melden Sie sich an, damit andere Benutzer Ihre Änderungen sehen können.</string>
@@ -976,6 +980,8 @@
 	<string name="taxi_wait">Erwartet in %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Es konnte kein Taxi in der Nähe gefunden werden</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">Taxi ist hie nicht verfügbar</string>
 	<string name="install_app">Installieren</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filter</string>
@@ -1106,7 +1112,7 @@
 	<string name="on">An</string>
 	<string name="off">Aus</string>
 	<string name="prefs_languages_information">Wir verwenden Text-to-Speech-Systeme für Sprachanweisungen. Viele Android-Geräte nutzen Google-TTS, das können Sie bei Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts) herunterladen oder aktualisieren.</string>
-	<string name="prefs_languages_information_off">Für Arabisch, Griechisch und Rumänisch müssen Sie möglicherweise zusätzliche TTS-Systeme von Google Play herunterladen und installieren (denn Google-TTS unterstützt diese Sprachen bisher noch nicht), Sie können zum Beispiel Vocalizer TTS oder SVOX Classics verwenden. Um die Einstellungen für Sprachsynthese zu verwalten, gehen Sie auf Ihrem Gerät zu Einstellungen -> Sprache und Eingabe -> Sprache -> Text-to-Speech-Ausgabe. Hier können Sie zusätzliche Sprachpakete herunterladen oder das bevorzugte Versprachlichungsprogramm auswählen.</string>
+	<string name="prefs_languages_information_off">Für einige Sprachen müssen Sie einen anderen Sprachsynthesizer oder ein zusätzliches Sprachpaket aus dem App Store installieren (Google Play Market, Samsung Apps). \nÖffnen Sie die Einstellungen Ihres Gerätes → Sprache und Eingabe → Sprache → Text-to-Speech-Ausgabe. Hier können Sie die Einstellungen für Sprachsynthese verwalten (beispielsweise ein Sprachpaket für die Offline-Verwendung herunterladen) und ein anderes Versprachlichungsprogramm auswählen.</string>
 	<string name="prefs_languages_information_off_link">Weitere Informationen finden Sie in dieser Anleitung.</string>
 	<string name="whatsnew_transliteration_title">Transliteration ins Lateinische</string>
 	<string name="whatsnew_transliteration_message">Wenn eine Straße oder ein Objekt in Ihrer Sprache keinen Namen hat, wird er mit lateinischen Buchstaben geschrieben.</string>
