--- a/android/res/values-fi/strings.xml
+++ b/android/res/values-fi/strings.xml
@@ -582,6 +582,8 @@
 	<string name="dialog_routing_change_end">Muuta määränpäätä</string>
 	<string name="dialog_routing_end_not_determined">Reittiä ei luotu. Määränpään paikannus ei onnistu.</string>
 	<string name="dialog_routing_select_closer_end">Valitse lähempänä tietä oleva määränpää.</string>
+	<string name="dialog_routing_change_intermediate">Välipisteen paikallistaminen ei onnistunut.</string>
+	<string name="dialog_routing_intermediate_not_determined">Siirrä välipistettä.</string>
 	<string name="dialog_routing_system_error">Järjestelmävirhe</string>
 	<string name="dialog_routing_application_error">Reittiä ei voi luoda sovellusvirheen vuoksi.</string>
 	<string name="dialog_routing_try_again">Yritä uudelleen</string>
@@ -787,6 +789,8 @@
 	<string name="onboarding_permissions_title">Anna MAPS:ME:lle tallennustilan ja sijainnin käyttöoikeus</string>
 	<string name="onboarding_permissions_message">Jotta voisit ladata karttoja, nähdä lähistöllä olevat paikan ja liikenteen sekä käyttää navigointia.</string>
 	<string name="onboarding_welcome_title">Tervetuloa käyttämään MAPS.ME:tä</string>
+	<string name="onboarding_welcome_first_subtitle">Ilmaiset, nopeat, yksityiskohtaiset ja offline-tilassa täysin toimivat kartat käännös käännökseltä -navigoinnilla.</string>
+	<string name="onboarding_welcome_second_subtitle">Käynnistämällä sovelluksen hyväksyt &lt;a href=\"http://legal.my.com/us/maps/tou/\">käyttöehdot&lt;/a> ja &lt;a href=\"https://legal.my.com/us/maps/privacy/\">tietosuojakäytännön&lt;/a>.</string>
 	<string name="dialog_incorrect_feature_position">Vaihda sijaintia</string>
 	<string name="message_invalid_feature_position">Kohdetta ei voida asettaa tänne</string>
 	<string name="login_to_make_edits_visible">Kirjaudu sisään jotta muut käyttäjät voivat nähdä tekemäsi muokkaukset.</string>
@@ -962,6 +966,8 @@
 	<string name="taxi_wait">Saapumiseen arviolta %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Läheltä ei löytynyt taksia</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">Taksi ei ole saatavilla täällä</string>
 	<string name="install_app">Asenna</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Suodatin</string>
@@ -1092,7 +1098,7 @@
 	<string name="on">Käytössä</string>
 	<string name="off">Ei käytössä</string>
 	<string name="prefs_languages_information">Käytämme ääniohjeisiin tekstistä puheeksi -järjestelmää. Monet Android-laitteet käyttävät Googlen tekstistä puheeksi -sovellusta, jonka voit ladata tai päivittää Google Playssä (https://play.google.com/store/apps/details?id=com.google.android.tts)</string>
-	<string name="prefs_languages_information_off">Arabian, kreikan ja romanian kieliä varten sinun täytyy mahdollisesti asentaa ylimääräinen tekstistä puheeksi -järjestelmä Google Playstä (koska Googlen tekstistä puheeksi -sovellus ei vielä tue näitä kieliä), kuten Vocalizer TTS tai SVOX Classic. Voit hallita tekstistä puheeksi -ominaisuuden asetuksia laitteellasi kohdassa Asetukset –> Kieli ja syöttötapa –> Puhe –> Tekstistä puheeksi -toisto. Täällä voit ladata uusia kielipaketteja tai valita haluamasi tekstistä puheeksi -ohjelman.</string>
+	<string name="prefs_languages_information_off">Joidenkin kielien osalta sinun täytyy asentaa toinen puhesyntetisaattori tai lisäkielipaketti sovelluskaupasta (Google Play Market, Samsung Apps). Avaa laitteen asetukset → Kieli ja syöttötapa → Puhe → Teksistä puheeksi -toisto. Täällä voit hallita puhesynteesin asetuksia (esimerkiksi ladata offline-tilassa käytettävän kielipaketin) ja valita toisen tekstistä puheeksi -moottorin.</string>
 	<string name="prefs_languages_information_off_link">Lisätietoja saat tästä oppaasta.</string>
 	<string name="whatsnew_transliteration_title">Translitterointi latinaksi</string>
 	<string name="whatsnew_transliteration_message">Jos kadulla tai kohteella ei ole nimeä kielelläsi, se kirjoitetetaan latinalaisilla kirjaimilla.</string>
