--- a/android/res/values-fr/strings.xml
+++ b/android/res/values-fr/strings.xml
@@ -593,6 +593,8 @@
 	<string name="dialog_routing_change_end">Modifiez la destination</string>
 	<string name="dialog_routing_end_not_determined">Impossible de localiser la destination. L\'itinéraire n\'a pas pu être créé.</string>
 	<string name="dialog_routing_select_closer_end">Choisissez une destination à proximité d\'une route.</string>
+	<string name="dialog_routing_change_intermediate">Impossible de localiser le point intermédiaire.</string>
+	<string name="dialog_routing_intermediate_not_determined">Veuillez ajuster votre point intermédiaire.</string>
 	<string name="dialog_routing_system_error">Erreur système</string>
 	<string name="dialog_routing_application_error">Impossible de créer l\'itinéraire à cause d\'une erreur dans l\'application.</string>
 	<string name="dialog_routing_try_again">Réessayer</string>
@@ -800,6 +802,8 @@
 	<string name="onboarding_permissions_title">Autoriser MAPS.ME à accéder au stockage et à la localisation</string>
 	<string name="onboarding_permissions_message">Afin de pouvoir télécharger des cartes, voir les lieux et le trafic près de vous et utiliser la navigation.</string>
 	<string name="onboarding_welcome_title">Bienvenue sur MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">Cartes avec navigation étape par étape, gratuites, rapides, détaillées et totalement hors ligne.</string>
+	<string name="onboarding_welcome_second_subtitle">En lançant l’application, vous acceptez les &lt;a href=\"http://legal.my.com/us/maps/tou/\">Conditions d’utilisation&lt;/a> et la &lt;a href=\"https://legal.my.com/us/maps/privacy/\">Politique de confidentialité&lt;/a>.</string>
 	<string name="dialog_incorrect_feature_position">Modifier l\'emplacement</string>
 	<string name="message_invalid_feature_position">Aucun objet ne peut être localisé ici</string>
 	<string name="login_to_make_edits_visible">Se connecter pour que d\'autres utilisateurs puissent voir les changements que vous avez effectués.</string>
@@ -975,6 +979,8 @@
 	<string name="taxi_wait">Attendu dans %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Impossible de trouver un taxi à proximité</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">Taxi pas disponible ici</string>
 	<string name="install_app">Installer</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filtrer</string>
@@ -1105,7 +1111,7 @@
 	<string name="on">On</string>
 	<string name="off">Off</string>
 	<string name="prefs_languages_information">Nous utilisons le système TTS pour les instructions vocales. De nombreux appareils Android utilisent Google TTS, vous pouvez le télécharger ou le mettre à jour depuis Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)</string>
-	<string name="prefs_languages_information_off">Pour les langues arabe, grecque et roumaine, Il vous faudra peut-être installer un TTS supplémentaire (car Google TTS n\'est pas encore compatible avec ces langues) depuis Google Play tel que Vocalizer TTS ou SVOX Classics. Pour gérer les paramètres de synthèse vocale, ouvrez sur votre appareil Paramètres –> Langue et entrée – > Parole – > Texte en parole. Vous pouvez télécharger ici un package de langues supplémentaires ou sélectionner votre logiciel de synthèse vocale préféré.</string>
+	<string name="prefs_languages_information_off">Pour certaines langues, il vous faudra installer un autre logiciel de synthèse vocale ou un pack de langue supplémentaire depuis l’app store (Google Play Market, Samsung Apps). Ouvrez les paramètres de votre appareil → Langue et saisie → Reconnaissance vocale → Saisie vocale. Ici, vous pouvez gérer les paramètres pour la synthèse vocale (par exemple, télécharger un pack de langue pour une utilisation en mode hors ligne) et sélectionner un autre moteur de saisie vocale.</string>
 	<string name="prefs_languages_information_off_link">Pour plus d’informations, veuillez consulter ce guide.</string>
 	<string name="whatsnew_transliteration_title">Translittération en latin</string>
 	<string name="whatsnew_transliteration_message">Si une rue ou un objet n’a pas de nom dans votre langue, l’alphabet latin sera utilisé pour l\'écrire.</string>
