--- a/android/res/values-in/strings.xml
+++ b/android/res/values-in/strings.xml
@@ -581,6 +581,8 @@
 	<string name="dialog_routing_change_end">Sesuaikan tujuan</string>
 	<string name="dialog_routing_end_not_determined">Rute tidak dibuat. Tidak dapat menemukan tujuan.</string>
 	<string name="dialog_routing_select_closer_end">Pilih titik tujuan yang lebih dekat dengan jalan.</string>
+	<string name="dialog_routing_change_intermediate">Tidak dapat menemukan titik antara.</string>
+	<string name="dialog_routing_intermediate_not_determined">Harap sesuaikan titik antara Anda.</string>
 	<string name="dialog_routing_system_error">Kesalahan sistem</string>
 	<string name="dialog_routing_application_error">Tidak dapat membuat rute karena kesalahan aplikasi.</string>
 	<string name="dialog_routing_try_again">Mohon coba lagi</string>
@@ -786,6 +788,8 @@
 	<string name="onboarding_permissions_title">Izinkan MAPS.ME mengakses penyimpanan dan lokasi</string>
 	<string name="onboarding_permissions_message">Agar Anda dapat mengunduh peta, melihat tempat dan lalu lintas di dekat Anda, dan menggunakan navigasi.</string>
 	<string name="onboarding_welcome_title">Selamat datang di MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">Peta gratis, cepat, terperinci, dan sepenuhnya tanpa internet dengan navigasi untuk setiap belokan.</string>
+	<string name="onboarding_welcome_second_subtitle">Dengan menjalankan aplikasi ini, Anda menyetujui &lt;a href=\"http://legal.my.com/us/maps/tou/\">Syarat-Syarat Penggunaan&lt;/a> dan &lt;a href=\"https://legal.my.com/us/maps/privacy/\">Kebijakan Privasi&lt;/a>.</string>
 	<string name="dialog_incorrect_feature_position">Ubah lokasi</string>
 	<string name="message_invalid_feature_position">Objek tidak dapat diletakkan di sini</string>
 	<string name="login_to_make_edits_visible">Masuk agar pengguna lain dapat melihat perubahan yang Anda buat.</string>
@@ -961,6 +965,8 @@
 	<string name="taxi_wait">Diharapkan dalam %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Tidak dapat menemukan taksi di dekat lokasi</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">Taksi tidak tersedia di sini</string>
 	<string name="install_app">Pasang</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filter</string>
@@ -1091,7 +1097,7 @@
 	<string name="on">On</string>
 	<string name="off">Mati</string>
 	<string name="prefs_languages_information">Kami menggunakan TTS sistem untuk petunjuk suara. Banyak perangkat Android menggunakan Google TTS, Anda dapat mengunduhnya dari Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)</string>
-	<string name="prefs_languages_information_off">Untuk bahasa Arab, Yunani, dan Romania, Anda mungkin perlu menginstal TTS tambahan (karena Google TTS belum mendukung bahasa-bahasa ini) dari Google Play, seperti Vocalizer TTS atau SVOX Classics.\nUntuk mengelola pengaturan untuk sintesis suara, pada perangkat Anda buka Settings (Pengaturan) –> Language and input (Bahasa dan input) –> Speech (Tuturan) –> Text to speech output (Output teks ke tuturan). Di sini Anda dapat mengunduh paket bahasa tambahan atau memilih mesin teks ke tuturan yang diinginkan.</string>
+	<string name="prefs_languages_information_off">Untuk beberapa bahasa, Anda perlu menginstal synthesizer suara atau paket bahasa tambahan dari toko aplikasi (Google Play Market, Samsung Apps).\nBuka pengaturan perangkat Anda → Language and input (Bahasa dan input) → Speech (Suara) → Text to speech (Teks ke suara).\nDi sini, Anda dapat mengelola pengaturan untuk sintesis suara (contohnya, mengunduh paket bahasa untuk penggunaan tanpa internet) dan memilih mesin tekske suara lain.</string>
 	<string name="prefs_languages_information_off_link">Untuk informasi selengkapnya, bacalah panduan ini.</string>
 	<string name="whatsnew_transliteration_title">Transliterasi ke dalam bahasa Latin</string>
 	<string name="whatsnew_transliteration_message">Jika jalan atau objek tidak memiliki nama dalam bahasa Anda, namanya akan dieja menggunakan alfabet Latin.</string>
