--- a/android/res/values-it/strings.xml
+++ b/android/res/values-it/strings.xml
@@ -581,6 +581,8 @@
 	<string name="dialog_routing_change_end">Modifica la destinazione</string>
 	<string name="dialog_routing_end_not_determined">Percorso non creato. Impossibile individuare la destinazione.</string>
 	<string name="dialog_routing_select_closer_end">Seleziona un punto di destinazione più vicino a una strada.</string>
+	<string name="dialog_routing_change_intermediate">Impossibile individuare un punto intermedio.</string>
+	<string name="dialog_routing_intermediate_not_determined">Regolare il punto intermedio.</string>
 	<string name="dialog_routing_system_error">Errore di sistema</string>
 	<string name="dialog_routing_application_error">Impossibile creare il percorso a causa di un errore dell\'applicazione.</string>
 	<string name="dialog_routing_try_again">Riprova</string>
@@ -786,6 +788,8 @@
 	<string name="onboarding_permissions_title">Consenti a MAPS.ME di accedere a memoria e posizione</string>
 	<string name="onboarding_permissions_message">Così puoi scaricare mappe, vedere luoghi e traffico vicino a te e usare la funzione di navigazione.</string>
 	<string name="onboarding_welcome_title">Benvenuto in MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">Mappe gratuite, veloci, dettagliate e interamente offline con navigazione turn-by-turn.</string>
+	<string name="onboarding_welcome_second_subtitle">Lanciando l\'applicazione, accetti i &lt;a href=\"http://legal.my.com/us/maps/tou/\">Termini di utilizzo&lt;/a> e l\'&lt;a href=\"https://legal.my.com/us/maps/privacy/\">Informativa sulla privacy&lt;/a>.</string>
 	<string name="dialog_incorrect_feature_position">Cambia posizione</string>
 	<string name="message_invalid_feature_position">Un oggetto non può essere posizionato qui</string>
 	<string name="login_to_make_edits_visible">Accedi per consentire ad altri utenti di vedere le modifiche apportate.</string>
@@ -961,6 +965,8 @@
 	<string name="taxi_wait">Atteso in %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Impossibile trovare un taxi nelle vicinanze</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">Taxi non disponibile qui</string>
 	<string name="install_app">Installa</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filtro</string>
@@ -1091,7 +1097,7 @@
 	<string name="on">On</string>
 	<string name="off">Off</string>
 	<string name="prefs_languages_information">Usiamo il TTS di sistema per le istruzioni vocali. Molti dispositivi Android utilizzano Google TTS, che puoi scaricare o aggiornare da Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)</string>
-	<string name="prefs_languages_information_off">Per l\'arabo, il greco e il rumeno, potrebbe essere necessario installare un servizio TTS aggiuntivo (poiché Google TTS non supporta ancora queste lingue) da Google Play, ad esempio Vocalizer TTS o SVOX Classics.\nPer gestire le impostazioni di sintesi vocale, dal tuo dispositivo apri Impostazioni –> Lingua e input –> Riconoscimento vocale –> Output sintesi vocale. Qui puoi scaricare il language pack aggiuntivo o selezionare il tuo motore di sintesi vocale preferito.</string>
+	<string name="prefs_languages_information_off">Per alcune lingue, sarà necessario installare un altro sintetizzatore vocale o un language pack aggiuntivo dall\'app store (Google Play Market, Samsung Apps).\nApri le impostazioni del tuo dispositivo → Lingua e input → Riconoscimento vocale → Output sintesi vocale.\nQui puoi gestire le impostazioni di sintesi vocale (ad esempio, scaricare un language pack per l\'utilizzo offline) e selezionare un altro motore di sintesi vocale.</string>
 	<string name="prefs_languages_information_off_link">Per maggiori informazioni, consulta questa guida.</string>
 	<string name="whatsnew_transliteration_title">Traslitterazione in latino</string>
 	<string name="whatsnew_transliteration_message">Se una strada o un oggetto non ha un nome nella tua lingua, tale nome sarà scritto utilizzando l\'alfabeto latino.</string>
