--- a/android/res/values-ja/strings.xml
+++ b/android/res/values-ja/strings.xml
@@ -581,6 +581,8 @@
 	<string name="dialog_routing_change_end">目的地の位置調整をしてください</string>
 	<string name="dialog_routing_end_not_determined">案内ルートを作成できません。目的地を確認できませんでした。</string>
 	<string name="dialog_routing_select_closer_end">道路に近い位置にある目的地を設定してください。</string>
+	<string name="dialog_routing_change_intermediate">中間地点を見つけることができません。</string>
+	<string name="dialog_routing_intermediate_not_determined">中間地点を調整してください。</string>
 	<string name="dialog_routing_system_error">システムエラー</string>
 	<string name="dialog_routing_application_error">アプリケーションのエラーにより案内ルートを作成できませんでした。</string>
 	<string name="dialog_routing_try_again">もう一度お試しください</string>
@@ -786,6 +788,8 @@
 	<string name="onboarding_permissions_title">MAPS.ME によるストレージと位置情報へのアクセスを許可する</string>
 	<string name="onboarding_permissions_message">これにより地図のダウンロード、近隣のスポットや交通情報の確認、およびナビゲーションを利用できるようになります。</string>
 	<string name="onboarding_welcome_title">MAPS.ME へようこそ</string>
+	<string name="onboarding_welcome_first_subtitle">ターンバイターン方式のナビゲーションを採用した、完全にオフラインで利用できる無料・高速かつ詳細な地図を提供します。</string>
+	<string name="onboarding_welcome_second_subtitle">アプリケーションを起動することで、&lt;a href=\"http://legal.my.com/us/maps/tou/\">利用規約&lt;/a>および&lt;a href=\"https://legal.my.com/us/maps/privacy/\">プライバシーポリシー&lt;/a>にご同意いただいたものとみなします。</string>
 	<string name="dialog_incorrect_feature_position">位置を変更してください</string>
 	<string name="message_invalid_feature_position">ここにはオブジェクトを配置できません</string>
 	<string name="login_to_make_edits_visible">他のユーザーにも変更が表示されるようログインしてください。</string>
@@ -961,6 +965,8 @@
 	<string name="taxi_wait">%s 後に到着予定</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">近隣にタクシーは見つかりませんでした</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">ここには利用可能なタクシーがありません</string>
 	<string name="install_app">インストール</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">フィルター</string>
@@ -1091,7 +1097,7 @@
 	<string name="on">オン</string>
 	<string name="off">オフ</string>
 	<string name="prefs_languages_information">音声案内にはシステムの TTS を使用します。多くの Android 端末が Google の TTS を使用しており、Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts) からダウンロードや更新を行うことができます。</string>
-	<string name="prefs_languages_information_off">アラビア語、ギリシャ語、ルーマニア語では Vocalizer TTS や SVOX Classics のような追加の TTS を Google Play からインストールする必要があるかもしれません（Google TTS がまだこれらの言語をサポートしていないため）。\n音声合成の設定を管理するには、お使いのデバイスで [設定] –> [言語と入力] –> [音声] –> [テキスト読み上げの出力] を開きます。こここで追加の言語パックをダウンロードしたり、お好みの音声合成エンジンを選択することができます。</string>
+	<string name="prefs_languages_information_off">いくつかの言語では、アプリストアからその他の音声合成または追加の言語パックをインストールする必要があります (Google Play マーケット、Samsung Apps) 。お使いのデバイスで [設定] → [言語と入力] → [音声] → [音声出力] を開いてください。ここで音声合成の設定 (たとえば、オフラインで使用する言語パックのダウンロードなど) を管理し、別の音声合成エンジンを選択することができます。</string>
 	<string name="prefs_languages_information_off_link">詳細については、このガイドをご確認ください。</string>
 	<string name="whatsnew_transliteration_title">ラテン文字への字訳</string>
 	<string name="whatsnew_transliteration_message">通り名や物件名をあなたの言語で表示できない場合、ラテン文字のアルファベットで綴られます。</string>
