--- a/android/res/values-sv/strings.xml
+++ b/android/res/values-sv/strings.xml
@@ -586,6 +586,8 @@
 	<string name="dialog_routing_change_end">Justera destination</string>
 	<string name="dialog_routing_end_not_determined">Ingen väg skapades. Kan inte lokalisera destination.</string>
 	<string name="dialog_routing_select_closer_end">Välj en destinationspunkt närmare en väg.</string>
+	<string name="dialog_routing_change_intermediate">Det går inte att hitta mellanliggande punkt.</string>
+	<string name="dialog_routing_intermediate_not_determined">Justera din mellanliggande punkt.</string>
 	<string name="dialog_routing_system_error">Systemfel</string>
 	<string name="dialog_routing_application_error">Kan inte skapa väg på grund av ett programfel.</string>
 	<string name="dialog_routing_try_again">Försök igen</string>
@@ -791,6 +793,8 @@
 	<string name="onboarding_permissions_title">Ge MAPS.ME åtkomst till lagring och plats</string>
 	<string name="onboarding_permissions_message">Så att du kan ladda ned kartor, visa platser och trafik i närheten och använda navigering.</string>
 	<string name="onboarding_welcome_title">Välkommen till MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">Gratis, snabba, detaljerade och fullständiga kartor offline med sväng-för-sväng-navigering.</string>
+	<string name="onboarding_welcome_second_subtitle">Genom att starta applikationen godkänner du &lt;a href=\"http://legal.my.com/us/maps/tou/\">användningsvillkoren&lt;/a> och &lt;a href=\"https://legal.my.com/us/maps/privacy/\">sekretesspolicyn&lt;/a>.</string>
 	<string name="dialog_incorrect_feature_position">Ändra placering</string>
 	<string name="message_invalid_feature_position">Ett objekt kan inte placeras här</string>
 	<string name="login_to_make_edits_visible">Logga in så att andra användare kan se de ändringar du gjort.</string>
@@ -966,6 +970,8 @@
 	<string name="taxi_wait">Förväntas om %s</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">Hittade ingen taxi i närheten</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">Taxi är inte tillgängligt här</string>
 	<string name="install_app">Installera</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filter</string>
@@ -1096,7 +1102,7 @@
 	<string name="on">På</string>
 	<string name="off">Av</string>
 	<string name="prefs_languages_information">Vi använder TTS-system för röstinstruktioner. Flera Android-enheter använder Google TTS. Du kan ladda ned eller uppdatera det på Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)</string>
-	<string name="prefs_languages_information_off">För arabiska, grekiska och rumänska måste du kanske installera ytterligare TTS (eftersom Google TTS inte stödjer dessa språk ännu) från Google Play, som till exempel Vocalizer TTS eller SVOX Classics.\nFör att hantera talsyntesinställningar på din enhet, öppna Inställningar –> Språk och inmatning –> Tal –> Text till tal-uppspelning. Här kan du ladda ned flera språkpaket eller välja den text till tal-motor som du föredrar.</string>
+	<string name="prefs_languages_information_off">För vissa språk måste du installera en annan talsyntes eller ett annat språkpaket från appbutiken (Google Play Market, Samsung-appar).\nÖppna inställningarna på enheten → Språk och inmatning → Tal → Text till tal-uppspelning.\nHär kan du hantera inställningarna för talsyntes (till exempel, ladda ned språkpaket för användning offline) och välja en annan text till tal-motor.</string>
 	<string name="prefs_languages_information_off_link">Kolla in den här guiden för mer information.</string>
 	<string name="whatsnew_transliteration_title">Transkribering till latin</string>
 	<string name="whatsnew_transliteration_message">Om en gata eller ett objekt saknar ett namn på ditt språk kommer det att stavas med det latinska alfabetet.</string>
