--- a/android/res/values-zh/strings.xml
+++ b/android/res/values-zh/strings.xml
@@ -588,6 +588,8 @@
 	<string name="dialog_routing_change_end">调整目的地</string>
 	<string name="dialog_routing_end_not_determined">路线未创建。无法定位目的地。</string>
 	<string name="dialog_routing_select_closer_end">请选择更靠近公路的目的地位置。</string>
+	<string name="dialog_routing_change_intermediate">无法定位中间点。</string>
+	<string name="dialog_routing_intermediate_not_determined">请调整您的中间点。</string>
 	<string name="dialog_routing_system_error">系统错误</string>
 	<string name="dialog_routing_application_error">由于应用程序错误，无法创建路线。</string>
 	<string name="dialog_routing_try_again">请重试</string>
@@ -793,6 +795,8 @@
 	<string name="onboarding_permissions_title">允许 MAPS.ME 访问存储空间和地点</string>
 	<string name="onboarding_permissions_message">因此，您可以下载地图，查看您附近的地点和交通状况并使用导航。</string>
 	<string name="onboarding_welcome_title">欢迎使用 MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">免费、快速、详细且完全离线的地图，并且带有精细导航功能。</string>
+	<string name="onboarding_welcome_second_subtitle">启动应用程序即表明您同意&lt;a href=\"http://legal.my.com/us/maps/tou/\">使用条款&lt;/a>和&lt;a href=\"https://legal.my.com/us/maps/privacy/\">隐私政策&lt;/a>。</string>
 	<string name="dialog_incorrect_feature_position">改变位置</string>
 	<string name="message_invalid_feature_position">对象无法设置在这里</string>
 	<string name="login_to_make_edits_visible">登陆，让其他用户能看到您所作出的修改。</string>
@@ -968,6 +972,8 @@
 	<string name="taxi_wait">预计 %s后到达</string>
 	<!-- When there are no available taxis nearby -->
 	<string name="taxi_not_found">无法在附近找到出租车</string>
+	<!-- When there are no available taxi providers nearby -->
+	<string name="taxi_no_providers">这里无法预约出租车</string>
 	<string name="install_app">安装</string>
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">筛选器</string>
@@ -1098,7 +1104,7 @@
 	<string name="on">开</string>
 	<string name="off">关</string>
 	<string name="prefs_languages_information">我们为语音指令使用“文字转语音”系统。许多 Android 设备使用 Google 文字转语音，您可以从 Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts) 下载或更新这一功能</string>
-	<string name="prefs_languages_information_off">对于阿拉伯语、希腊语和罗马尼亚语，您需要从 Google Play 中安装其他“文字转语音”功能（因为 Google 文字转语音不支持这些语言），例如 Vocalizer TTS 或 SVOX Classics。\n要管理语音合成的设置，请在您的设备上打开“设置 –> 语言和输入法 –> 语音 –> 文字转语音 (TTS) 输出”。您可以从这里下载其他语言包或选择首先的文字转语音引擎。</string>
+	<string name="prefs_languages_information_off">对于某些语言，您需要从应用商店（Google Play Market、Samsung Apps）中安装其他语音合成器或语言包。\n打开您的设备的设置 → 语言和输入法 → 语音 → 文字转语音 (TTS) 输出。\n您可以在这里管理语音合成的设置（例如，下载语言包供离线使用）和选择其他文字转语音引擎。</string>
 	<string name="prefs_languages_information_off_link">如需了解更多信息，请查阅此指南。</string>
 	<string name="whatsnew_transliteration_title">直译成拉丁文</string>
 	<string name="whatsnew_transliteration_message">如果某条街道或者某个对象在您的语言中没有对应的名称，它将使用拉丁字母拼写。</string>
