--- a/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
@@ -943,9 +943,9 @@
 
 "dialog_routing_select_closer_end" = "도로와 가까운 목적지를 지정해주세요.";
 
-"dialog_routing_change_intermediate" = "Please select another intermediate point";
+"dialog_routing_change_intermediate" = "중간 지점을 찾을 수 없습니다.";
 
-"dialog_routing_intermediate_not_determined" = "An intermediate point is not determined.";
+"dialog_routing_intermediate_not_determined" = "중간 지점을 조정하세요.";
 
 "dialog_routing_system_error" = "시스템 오류";
 
@@ -1354,9 +1354,9 @@
 
 "onboarding_welcome_title" = "MAPS.ME입니다.";
 
-"onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
+"onboarding_welcome_first_subtitle" = "턴-바이-턴 네비게이션을 이용하는 빠르고 상세하며 완전히 오프라인으로 이용 가능한 무료 지도입니다.";
 
-"onboarding_welcome_second_subtitle" = "By launching the application, you agree to <a href=\"http://legal.my.com/us/maps/tou/\">Terms</a> of Use and <a href=\"https://legal.my.com/us/maps/privacy/\">Privacy Policy</a>.";
+"onboarding_welcome_second_subtitle" = "애플리케이션을 시작하면, <a href=\"http://legal.my.com/us/maps/tou/\">이용 약관</a> 및 <a href=\"https://legal.my.com/us/maps/privacy/\">개인정보취급방침</a>에 동의하는 것입니다.";
 
 "dialog_incorrect_feature_position" = "위치 변경";
 
@@ -1683,7 +1683,7 @@
 "taxi_not_found" = "근처에서 택시를 찾을 수 없음";
 
 /* When there are no available taxi providers nearby */
-"taxi_no_providers" = "Couldn’t find a taxi provider nearby";
+"taxi_no_providers" = "여기서 택시를 이용할 수 없습니다.";
 
 "install_app" = "설치";
 
@@ -1934,7 +1934,7 @@
 
 "prefs_languages_information" = "당사는 음성 지침을 위해 시스템 TTS를 사용합니다. 많은 Android 장치에서 Google TTS를 사용합니다. Google Play(https://play.google.com/store/apps/details?id=com.google.android.tts)에서 Google TTS를 다운로드하거나 업데이트할 수 있습니다.";
 
-"prefs_languages_information_off" = "아랍어, 그리스어 및 루마니아어의 경우 Google Play에서 Vocalizer TTS 또는 SVOX Classic 같은 추가적인 TTS(Google TTS는 해당 언어를 아직 지원하지 않음)를 설치해야 할 수 있습니다.\n음성 합성에 대한 설정을 관리하려면 장치에서 설정 -> 언어 및 입력 -> 음성 -> 음성으로 읽어주기 설정을 엽니다. 여기에서 추가적인 언어 팩을 다운로드하거나 기본 음성으로 읽어주기 엔진을 선택할 수 있습니다.";
+"prefs_languages_information_off" = "일부 언어의 경우 앱 스토어(Google Play Market, Samsung Apps)에서 다른 음성 합성기 또는 추가 언어 팩을 설치해야 합니다.\n장치의 설정 → 언어 및 입력 → 음성 → 텍스트-음성 변환 출력을 엽니다.\n여기서 음성 합성에 대한 설정을 관리하고(예: 오프라인 사용을 위한 언어 팩 다운로드) 다른 텍스트-음성 변환 엔진을 선택할 수 있습니다.";
 
 "prefs_languages_information_off_link" = "자세한 내용을 보려면 이 가이드를 확인하세요.";
 
