--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -943,9 +943,9 @@
 
 "dialog_routing_select_closer_end" = "Velg et bestemmelsessted som er i nærheten av en vei.";
 
-"dialog_routing_change_intermediate" = "Please select another intermediate point";
+"dialog_routing_change_intermediate" = "Kunne ikke finne mellomstopp.";
 
-"dialog_routing_intermediate_not_determined" = "An intermediate point is not determined.";
+"dialog_routing_intermediate_not_determined" = "Kontroller og juster mellomstopp.";
 
 "dialog_routing_system_error" = "Systemfeil";
 
@@ -1354,9 +1354,9 @@
 
 "onboarding_welcome_title" = "Velkommen til MAPS.ME";
 
-"onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
+"onboarding_welcome_first_subtitle" = "Gratis, rask, detaljert og helt offline kart med rutenavigasjon.";
 
-"onboarding_welcome_second_subtitle" = "By launching the application, you agree to <a href=\"http://legal.my.com/us/maps/tou/\">Terms</a> of Use and <a href=\"https://legal.my.com/us/maps/privacy/\">Privacy Policy</a>.";
+"onboarding_welcome_second_subtitle" = "Når du starter programmet samtykker du til <a href=\"http://legal.my.com/us/maps/tou/\">bruksvilkårene</a> og <a href=\"https://legal.my.com/us/maps/privacy/\">reglene for personvern</a>.";
 
 "dialog_incorrect_feature_position" = "Endre plassering";
 
@@ -1683,7 +1683,7 @@
 "taxi_not_found" = "Kunne ikke finne drosje i nærheten";
 
 /* When there are no available taxi providers nearby */
-"taxi_no_providers" = "Couldn’t find a taxi provider nearby";
+"taxi_no_providers" = "Drosje ikke tilgjengelig her";
 
 "install_app" = "Installer";
 
@@ -1934,7 +1934,7 @@
 
 "prefs_languages_information" = "Vi bruker system TTS for stemmeveiledning. Mange Android-enheter bruker Google TTS, Du kan laste ned eller oppdatere via Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)";
 
-"prefs_languages_information_off" = "Du må installere ekstra TTS for arabisk, gresk og rumensk (siden Google TTS ikke støtter språkene ennå) fra Google Play, som for eksempel Vocalizer TTS eller SVOX Classics.\nFor å behandle innstillinger for talesyntese, gå til Innstillinger -> Språk og inndata -> Tale-> Tekst til tale. Her kan du laste ned flere språkpakker eller velg foretrukket tekst til tale-motor.";
+"prefs_languages_information_off" = "For enkelte språk er det nødvendig å installere en annen talesyntese eller en ekstra språkpakke fra appbutikken (Google Play Market, Samsung Apps).\nGå til enhetens innstillinger → Språk og input → Tale → Tekst til tale output.\nHer kan du administrere innstillingene for talesyntese (for eksempel laste ned språkpakke for offline bruk) og velge en annen tekst-til-tale-motor.";
 
 "prefs_languages_information_off_link" = "Les denne veiledningen for mer informasjon.";
 
