--- a/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
@@ -943,9 +943,9 @@
 
 "dialog_routing_select_closer_end" = "请选择更靠近公路的目的地位置。";
 
-"dialog_routing_change_intermediate" = "Please select another intermediate point";
+"dialog_routing_change_intermediate" = "无法定位中间点。";
 
-"dialog_routing_intermediate_not_determined" = "An intermediate point is not determined.";
+"dialog_routing_intermediate_not_determined" = "请调整您的中间点。";
 
 "dialog_routing_system_error" = "系统错误";
 
@@ -1354,9 +1354,9 @@
 
 "onboarding_welcome_title" = "欢迎使用 MAPS.ME";
 
-"onboarding_welcome_first_subtitle" = "Free, fast, detailed and entirely offline maps with turn-by-turn navigation.";
+"onboarding_welcome_first_subtitle" = "免费、快速、详细且完全离线的地图，并且带有精细导航功能。";
 
-"onboarding_welcome_second_subtitle" = "By launching the application, you agree to <a href=\"http://legal.my.com/us/maps/tou/\">Terms</a> of Use and <a href=\"https://legal.my.com/us/maps/privacy/\">Privacy Policy</a>.";
+"onboarding_welcome_second_subtitle" = "启动应用程序即表明您同意<a href=\"http://legal.my.com/us/maps/tou/\">使用条款</a>和<a href=\"https://legal.my.com/us/maps/privacy/\">隐私政策</a>。";
 
 "dialog_incorrect_feature_position" = "改变位置";
 
@@ -1683,7 +1683,7 @@
 "taxi_not_found" = "无法在附近找到出租车";
 
 /* When there are no available taxi providers nearby */
-"taxi_no_providers" = "Couldn’t find a taxi provider nearby";
+"taxi_no_providers" = "这里无法预约出租车";
 
 "install_app" = "安装";
 
@@ -1934,7 +1934,7 @@
 
 "prefs_languages_information" = "我们为语音指令使用“文字转语音”系统。许多 Android 设备使用 Google 文字转语音，您可以从 Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts) 下载或更新这一功能";
 
-"prefs_languages_information_off" = "对于阿拉伯语、希腊语和罗马尼亚语，您需要从 Google Play 中安装其他“文字转语音”功能（因为 Google 文字转语音不支持这些语言），例如 Vocalizer TTS 或 SVOX Classics。\n要管理语音合成的设置，请在您的设备上打开“设置 –> 语言和输入法 –> 语音 –> 文字转语音 (TTS) 输出”。您可以从这里下载其他语言包或选择首先的文字转语音引擎。";
+"prefs_languages_information_off" = "对于某些语言，您需要从应用商店（Google Play Market、Samsung Apps）中安装其他语音合成器或语言包。\n打开您的设备的设置 → 语言和输入法 → 语音 → 文字转语音 (TTS) 输出。\n您可以在这里管理语音合成的设置（例如，下载语言包供离线使用）和选择其他文字转语音引擎。";
 
 "prefs_languages_information_off_link" = "如需了解更多信息，请查阅此指南。";
 
